# project-chemie-zuurstof

./: README.md  install.sh  makefile  setup.sh
arduino-controller/: arduino-controller.ino  makefile
backend/: Cargo.toml
backend/src/: main.rs
backend/src/gpio/: mod.rs  system.rs  types.rs
backend/src/routes/: gpio.rs  mod.rs  static_files.rs
backend/tests/: curl-post-gpio.sh  gpio.json
frontend/: package-lock.json  package.json  snowpack.config.js
frontend/public/: index.html
frontend/src/: App.svelte  card.svelte  data.ts  gpio-form.svelte  index.ts  monitor.svelte  ws.ts
