[package]
name = "backend"
version = "0.1.0"
authors = ["samclercky"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
parking_lot = "0.11.1"
tokio = { version = "1.5.0", features = ["macros"] }
serde = { version = "1.0.117", features = ["derive"]}
