[package]
name = "backend"
version = "0.1.0"
authors = ["samclercky"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
thiserror = "1.0.24"

gpio-cdev = "0.4.0"

parking_lot = "0.11.1"

tokio = { version = "1.5.0", features = ["full"] }

serde = { version = "1.0.117", features = ["derive"]}
serde_derive = "1.0.117"
serde_json = "1.0.59"

log = "0.4.14"
pretty_env_logger = "0.4.0"
